--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "react": "^16.12.0"
   },
   "devDependencies": {
-    "@storybook/addon-storysource": "^5.3.13",
-    "@storybook/react": "^5.3.13",
+    "@storybook/addon-storysource": "^6.3.8",
+    "@storybook/react": "^6.3.8",
     "@types/classnames": "^2.2.9",
     "@types/d3-axis": "^1.0.12",
     "@types/d3-brush": "^1.0.10",
@@ -39,7 +39,7 @@
     "@typescript-eslint/parser": "^2.20.0",
     "batch-tasks": "^0.1.4",
     "classnames": "^2.2.6",
-    "css-loader": "^3.4.2",
+    "css-loader": "^6.3.0",
     "d3-scale": "^3.2.1",
     "d3-shape": "^1.3.7",
     "d3-time-format": "^2.2.3",
@@ -52,17 +52,19 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^5.1.0",
-    "node-sass": "^4.13.1",
+    "html-webpack-plugin": "^5.3.2",
+    "node-sass": "^6.0.1",
     "rbush": "^3.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "replace": "^1.1.5",
     "rimraf": "^3.0.2",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^12.1.0",
     "source-map-loader": "^0.2.4",
-    "style-loader": "^1.1.3",
+    "style-loader": "^3.2.1",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5"
+    "typescript": "^4.4.3",
+    "webpack": "^5.53.0"
   },
   "dependencies": {
     "d3-axis": "^1.0.12",
